[build-system]
requires = ["setuptools >=64.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"


[project]
dynamic = ["version"]
name = "surya-scripts"
description = "ocr scripts using surya"
readme = "README.md"
authors = [
    {name = "Petr Sluka"},
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "attrs==25.1.0",
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "clipboard==0.0.4",
    "colorama==0.4.6",
    "filelock==3.13.1",
    "filetype==1.2.0",
    "fsspec==2024.6.1",
    "gitdb==4.0.12",
    "GitPython==3.1.44",
    "huggingface-hub==0.29.1",
    "idna==3.10",
    "Jinja2==3.1.4",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.5",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "narwhals==1.28.0",
    "networkx==3.3",
    "numpy==2.1.2",
    "opencv-python-headless==4.11.0.86",
    "packaging==24.2",
    "pandas==2.2.3",
    "pdftext==0.6.1",
    "pillow==10.4.0",
    "platformdirs==4.3.6",
    "protobuf==5.29.3",
    "pyarrow==19.0.1",
    "pydantic==2.10.6",
    "pydantic-settings==2.8.1",
    "pydantic_core==2.27.2",
    "pydeck==0.9.1",
    "Pygments==2.19.1",
    "pypdfium2==4.30.0",
    "pyperclip==1.9.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2025.1",
    "PyYAML==6.0.2",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.23.1",
    "safetensors==0.5.3",
    "setuptools==70.2.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "streamlit==1.42.2",
    "surya-ocr==0.12.1",
    "sympy==1.13.1",
    "tenacity==9.0.0",
    "tokenizers==0.21.0",
    "toml==0.10.2",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "transformers==4.49.0",
    "typing_extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "watchdog==6.0.0",
]


[tool.setuptools_scm]


[project.scripts]
to-latex = "ocr_to_latex:main"
